# sequencetool

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ConsensusAlign.C  ConsensusAlign.h  FastaConvert.C  FastaConvert.h  MakeConsensus.C  MakeConsensus.h  Mpf.C  NtAlign.C  NtAlign.h  Utils.C  Utils.h  ssw_LICENSE.txt
